# escansao-poetica

./: .gitignore  CHANGELOG.md  README.md  escansao-poetica.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/9cd500e4/: cabal_macros.h
assets/: excecoes.txt
src/: Acentuacao.hs  AnaliseLexical.hs  Escansao.hs  Main.hs  PreProcessamento.hs  Silabacao.hs  Tipos.hs  TiposJSON.hs
test/: Spec.hs
