cabal-version:       2.2

name:                escansao-poetica
version:             0.1.0.0
homepage:            https://github.com/githubuser/escansao-poetica#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable escansao-poetica
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  
  -- AQUI: Listamos todos os módulos que você criou na pasta src
  other-modules:       Acentuacao
                     , AnaliseLexical
                     , Escansao
                     , PreProcessamento
                     , Silabacao
                     , Tipos
                     , TiposJSON

  -- AQUI: Adicionamos as bibliotecas necessárias
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , aeson
                     , text
                     , wai-cors

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/escansao-poetica